--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,6 @@
 {
-  "semi": false,
   "arrowParens": "always",
+  "htmlWhitespaceSensitivity": "ignore",
+  "semi": false,
   "singleQuote": true
 }
