--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/dotenv": "^1.4.0",
     "@nuxtjs/pwa": "^3.0.0-0",
+    "faunadb": "^2.14.1",
     "netlify-identity-widget": "^1.6.0",
     "nuxt": "^2.0.0"
   },
