Moving package.json deeper.
Final attempt to fix faunadb module not found, my assignments are calling.

--- a/functions/todos/package.json
+++ b/functions/todos/package.json
@@ -2,6 +2,7 @@
   "name": "micro-todo-vue-functions",
   "version": "1.0.0",
   "description": "required dependencies for this app to work",
+  "main": "todos.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
